# p4score

./: README.md  pyproject.toml
p4score/: __init__.py  conversion_functions.py  p4score_calculation.py
